IMPALA-431: from_unixtime does not support BIGINT.

Change-Id: I64e1e06d179c7c11199ea535f82f6e880dd0fc6e
Reviewed-on: http://gerrit.ent.cloudera.com:8080/103
Reviewed-by: Ishaan Joshi <ishaan@cloudera.com>
Reviewed-by: Lenni Kuff <lskuff@cloudera.com>
Tested-by: Lenni Kuff <lskuff@cloudera.com>